== 0.1.11 (in Git)
  * minor enhancements
    * changed implementation of configuration object
    * exposed "host" attribute within templates
    * send content into template with <tt>yield</tt> instead of instance variable
    * Cucumber tests
    * refactor application_view into "view" folder
    * rename "processor" folder into "compressor" and "validator" folders
    * move JS validator and JS compressor into YMDP gem
  * bug fixes
    * fixed filename in form_post.rb
    * removed unneeded data folder from /spec

== 0.1.10 2010-01-22
  * minor enhancements
    * use YRB gem to parse .pres files

== 0.1.9 2010-01-22
  * major enhancements
    * extract translation into new gem, Idiom
    
== 0.1.8.1 2010-01-20
  * bug fixes
    * fix typo in constants.rb
    
== 0.1.8 2010-01-20
  * minor enhancements
    * load JSLint settings from config/jslint.js
  * bug fixes
    * eliminate extra newlines in translations
    * fixed incorrect paths in compiler
    * correctly sync YMDP application with rake sync

== 0.1.7 2010-01-17
  * minor enhancements
    * refactored ApplicationView and the F file support class
    * improved RDoc coverage
    * improved test coverage to 89%

== 0.1.6 2010-01-16
  * major enhancements
    * YMDP global settings now assigned through YMDP::Base.configure block
    * raise exceptions if vital settings like version and server don't exist
  * minor enhancements
    * improved RDoc coverage
    * improved test coverage
    * YMDP_ROOT is now replaced by BASE_PATH
    * renamed YMDP::Base to YMDP::ApplicationView
    * made new YMDP::Base to handle global settings
    