@@ -24,3 +24,4 @@ vendor/bin/*
 vendor/gems/*
 !vendor/gems/cache/
 features/data/servers
+features/data/tmp
