@@ -25,6 +25,7 @@ begin
     gem.add_runtime_dependency "ymdp_generator", ">= 0"
     gem.add_runtime_dependency "ymdt", ">= 0"
     gem.add_runtime_dependency "yrb", ">= 0"
+    gem.add_runtime_dependency "w3c_validators", ">= 0"
     # gem is a Gem::Specification... see http://www.rubygems.org/read/chapter/20 for additional settings
   end
   Jeweler::GemcutterTasks.new
