@@ -8,6 +8,7 @@ $LOAD_PATH.unshift dir unless $LOAD_PATH.include?(dir)
 #
 
 require 'rubygems'
+require 'haml'
 require 'erb'
 require 'set'
 
